--- a/react-client/package.json
+++ b/react-client/package.json
@@ -11,6 +11,7 @@
         "react-redux": "^7.1.3",
         "react-router-dom": "^5.1.2",
         "react-scripts": "3.2.0",
+        "react-typed": "^1.2.0",
         "redux": "^4.0.4",
         "redux-actions": "^2.6.5",
         "redux-logger": "^3.0.6",
